force-app/main/default/objects/Vehiculo__c/Vehiculo__c.object-meta.xml
<CustomObject>
    <label>Test</label>
    <nameField>
        <displayFormat>VH-{00000}</displayFormat>
        <label>Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Vehiculos</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>