force-app/main/default/objects/Vehiculo__c/fields/Anio__c.field-meta.xml
<CustomField>
    <fullName>Anio__c</fullName>
    <label>Año</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>