force-app/main/default/objects/Vehiculo__c/fields/Existencia__c.field-meta.xml
<CustomField>
    <fullName>Existencia__c</fullName>
    <label>Existencia</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>